--- a/style.css
+++ b/style.css
@@ -441,3 +441,89 @@ header.shadow {
 .footer-box p:hover {
   color: var(--main-color);
 }
+
+/* Media Queries */
+@media (max-width: 1024px) {
+  .navbar {
+    display: none;
+  }
+
+  #menu-icon {
+    display: block;
+  }
+
+  .navbar.active {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    width: 100%;
+    background: var(--background-color);
+    padding: 20px;
+    border-top: 1px solid var(--main-color);
+  }
+
+  .search-box {
+    top: 100%;
+  }
+
+  .home-text h1 {
+    font-size: 2.5rem;
+  }
+
+  .home-text p {
+    font-size: 1rem;
+  }
+
+  .cars-container .box {
+    flex: 1 1 45%;
+  }
+
+  .about-us-img,
+  .about-us-text {
+    flex: 1 1 100%;
+  }
+
+  .services-container .box,
+  .rental-container .box {
+    flex: 1 1 45%;
+  }
+
+  .footer-container .footer-box {
+    flex: 1 1 45%;
+  }
+}
+
+@media (max-width: 768px) {
+  .home {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .home-text h1 {
+    font-size: 2rem;
+  }
+
+  .home-text p {
+    font-size: 0.875rem;
+  }
+
+  .cars-container .box {
+    flex: 1 1 100%;
+  }
+
+  .about-us {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .services-container .box,
+  .rental-container .box {
+    flex: 1 1 100%;
+  }
+
+  .footer-container .footer-box {
+    flex: 1 1 100%;
+  }
+}
